# doi2bib3

./: .gitignore  AUTHORS.md  README.md  bib_utils.py  doi2bib2_backend.py  main.py  pyproject.toml  tox.ini  update-version.sh
.github/workflows/: AUR.yml  build-deb.yml  publish-pypi.yml  py-build.yaml  pytest.yml  tox.yml
AUR/: PKGBUILD
debian/: changelog  control  copyright  python3-doi2bib3.install  rules  watch
docs/: ALGORITHM.md  ALGORITHM_VISUALS.md
doi2bib2/: __init__.py  backend.py  utils.py
doi2bib3/: APS_replacement.json  IOP_replacement.json  Nature_replacement.json  __init__.py  backend.py  bibitem.py  cli.py  constants.py  io.py  normalize.py  utils.py
doi2bib3/verify/: __init__.py  bibparser.py  citecheck.py  matching.py  sources.py  verifier.py
scripts/: doi2bib3
tests/: test_arxiv_metadata.py  test_bibitem.py  test_blackbox.py  test_isbn.py  test_normalize.py  test_publisher_urls.py  test_verify_bibparser.py  test_verify_citecheck.py  test_verify_matching.py
