[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doi2bib3"
version = "0.5.0"
description = "Fetch BibTeX from DOI, arXiv ID, journal URL and article title"
readme = { file = "README.md", content-type = "text/markdown" }
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [ {name = "Archisman Panigrahi", email = "apandada1@gmail.com"} ]
maintainers = [ {name = "Archisman Panigrahi", email = "apandada1@gmail.com"} ]
requires-python = ">=3.9"
keywords = ["doi", "bibtex", "arxiv"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
  "requests",
  "bibtexparser",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2.post1",
    "pytest>=9.0.1",
    "tox>=4.32.0",
]


[project.urls]
"Homepage" = "https://github.com/archisman-panigrahi/doi2bib3"
"Source" = "https://github.com/archisman-panigrahi/doi2bib3"
"Bug Tracker" = "https://github.com/archisman-panigrahi/doi2bib3/issues"

[project.scripts]
doi2bib3 = "doi2bib3.utils:cli_doi2bib3"

[tool.setuptools.packages.find]
include = ["doi2bib3*"]

[tool.pytest.ini_options]
# pythonpath = "src"
testpaths = "tests"
filterwarnings = "ignore::pytest.PytestCacheWarning"
markers = [
    "blackbox: a black-box test",
    "imported: a test which imports a function of the script",
]
